# html-editori

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/poetry-testi/: pyproject.toml
laskarit/viikko2/unicafe/src/: maksukortti.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
src/: config.py  database_connection.py  index.py  initialize_database.py  jjjjj
src/entities/: node.py
src/repositories/: html_repository.py
src/services/: draw_node.py  html_builder.py  tree_builder.py
src/tests/: conftest.py  draw_node_test.py  experimental_gui_test.py  html_builder_test.py  html_repository_test.py  test_testi.py  tree_builder_test.py
src/ui/: experimental_gui.py  gui.py  testi.py
